JDK 9 HttpClient for calling remote commands